<resources>

    <!--MainActivity-->
    <string name="total">Total</string>
    <string name="cash">Cash</string>
    <string name="change_due">Change Due</string>
    <string name="currency_symbol" translatable="false">$</string>
    <string name="zeroCurrency" translatable="false">$0.00</string>

    <!--Bills-->
    <string name="bills">Bills</string>
    <string name="twenty" translatable="false">$20</string>
    <string name="ten" translatable="false">$10</string>
    <string name="five" translatable="false">$5</string>
    <string name="one" translatable="false">$1</string>

    <!--Coins-->
    <string name="coins">Coins</string>
    <string name="quarter" translatable="false">$0.25</string>
    <string name="dime" translatable="false">$0.10</string>
    <string name="nickel" translatable="false">$0.05</string>
    <string name="penny" translatable="false">$0.01</string>

    <!-- Toast message when user enters a score that is too large [CHAR LIMIT=30] -->
    <string name="large_number_error_toast">Error: number is too large</string>

    <!--Donation page-->
    <string name="action_donate">Donate to Developer</string>
    <string name="donate_title">Donate</string>
    <string name="donate_greeting">Hello!</string>
    <string name="donate_message">My name is Amanda.</string>
    <string name="donate_message2"> If you are enjoying this app I developed, please consider purchasing my donation app.</string>
    <string name="donate_message3"> The donation app does not do anything, but your donation will show me that my time spent developing free, no-ads apps is appreciated.</string>
    <string name="upgrade_message2"> If you are enjoying this app I developed, please consider purchasing my upgrade app.</string>
    <string name="upgrade_message3"> The upgrade app includes checkboxes for marking
        when you run out of bills or coins, and your purchase will show me that my time spent developing free, no-ads apps is appreciated.</string>
    <string name="donate_thanks"> Thanks!</string>
    <string name="play_store_direct_link_blue" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloper_blue</string>
    <string name="play_store_browser_link_blue" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloper_blue</string>
    <string name="play_store_direct_link_red" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloperred</string>
    <string name="play_store_browser_link_red" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloperred</string>
    <string name="play_store_direct_link_black" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloperblack</string>
    <string name="play_store_browser_link_black" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloperblack</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="upgrade">Upgrade</string>
    <string name="play_store_browser_link_upgrade" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.changecalculatorpaid</string>
    <string name="play_store_direct_link_upgrade" translatable="false">market://details?id=com.amandafarrell.www.changecalculatorpaid</string>
    <string name="small_heart">small heart</string>
    <string name="medium_heart">medium heart</string>
    <string name="large_heart">large heart</string>
    <string name="app_name">Change Calculator</string>
</resources>
