<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/donate_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/donate_greeting"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/donate_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp"
            android:text="@string/donate_message"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/donate_message2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp"
            android:text="@string/upgrade_message2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/donate_message3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp"
            android:text="@string/upgrade_message3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/donate_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp"
            android:text="@string/donate_thanks"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade"
            android:textColor="@android:color/white"
            android:onClick="goToUpgradeLink"/>
    </LinearLayout>
</ScrollView>


