<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amandfarrell.www.changecalculator.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:text="@string/total" />

<!--            <TextView
                android:id="@+id/total_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroCurrecy"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />-->

            <EditText
                android:id="@+id/total"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="48dp"
                android:text="@string/zeroCurrecy" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:text="@string/cash" />

<!--            <TextView
                android:id="@+id/cash_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroCurrecy"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />-->

            <EditText
                android:id="@+id/cash"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="48dp"
                android:text="@string/zeroCurrecy" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:text="@string/change_due" />

            <TextView
                android:id="@+id/change_due"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="56dp"
                android:text="@string/zeroCurrecy"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />


        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
